correction droits endpoint /periodes